recursion.logo.sierpinski.Sierpinski.scala.error
Compilation error:
Sierpinski:1: error: '<-' expected but ')' found.
  for (0->i to 3^level){
                      ^Sierpinski:13: error: illegal start of simple expression
} 
^